<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_cancel_theme">

        <TextView
            android:id="@+id/txt_set_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/set_name_keyboard"
            android:textColor="#28293D"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_enter_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="23dp"
            android:background="@drawable/bg_edit_text_creat_theme"
            android:gravity="center_vertical"
            android:hint="@string/zomj_themes"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:maxLines="1"
            android:textColorHint="#C5C5C5"
            android:textCursorDrawable="@null"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_set_name" />

        <TextView
            android:id="@+id/btn_cancel_create"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/bg_cancel_create_theme"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_agree_create"
            app:layout_constraintStart_toStartOf="@id/edt_enter_name"
            app:layout_constraintTop_toBottomOf="@id/edt_enter_name" />

        <TextView
            android:id="@+id/btn_agree_create"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/bg_save_theme"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/save_theme"
            android:textColor="@color/white"
            android:textSize="@dimen/text14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/edt_enter_name"
            app:layout_constraintStart_toEndOf="@id/btn_cancel_create" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>