<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_cancel_theme">

        <TextView
            android:id="@+id/tittle_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/delete_themes"
            android:textColor="#28293D"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/are_you_sure_delete"
            android:textColor="#28293D"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tittle_delete" />

        <View
            android:id="@+id/v_dialog"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="#CECED0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_query" />

        <View
            android:id="@+id/v_center"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="#CECED0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_agree_delete"
            app:layout_constraintStart_toEndOf="@id/btn_cancel_delete"
            app:layout_constraintTop_toBottomOf="@id/v_dialog" />

        <TextView
            android:id="@+id/btn_cancel_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/no"
            android:textColor="#28293D"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/v_center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_dialog" />

        <TextView
            android:id="@+id/btn_agree_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/yes_theme"
            android:textColor="@color/color_red"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/v_center"
            app:layout_constraintTop_toBottomOf="@id/v_dialog" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>