<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgViewBackFont"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="3dp"
        android:background="@drawable/bg_circle_black"
        android:padding="5dp"
        android:src="@drawable/img_back_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitleFont"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_margin="3dp"
        android:gravity="center"
        android:paddingEnd="30dp"
        android:text="@string/fonts"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgViewBackFont"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <RelativeLayout
        android:id="@+id/rll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:background="@color/color_back_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgViewBackFont">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rclFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:padding="5dp" />

        <ProgressBar
            android:id="@+id/spinkitFont"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cllAddFont"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_back_30"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/rll"
        app:layout_constraintTop_toTopOf="@id/rll">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/txtAddFont"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_add_font"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/add_font"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtCancelFont"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_cancel_font"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>